k8s/base/auto-study-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-study-app-service
  namespace: app
spec:
  type: LoadBalancer
  selector:
    app: auto-study-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      # fast api port : 8000
